--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html xmlns='http://www.w3.org/1999/xhtml' lang='' xml:lang=''>
 <head>
 	<meta charset='utf-8' />
-	<meta name='viewport' content='width=device-width, user-scalable=no' />
-	<title>Arpg Game 0</title>
+	<meta name='viewport' content='width=device-width, user-scalable=no, initial-scale=0.95' />
+	<title>海云岛</title>
 	<style type='text/css'>
 
 		body {
@@ -122,6 +122,8 @@
 		Please try updating or use a different browser.
 	</canvas>
 	<div id='status'>
+		<div>我知道你很急，但你先别急</div>
+		<div>可能要加载很久，建议先玩别的</div>
 		<div id='status-progress' style='display: none;' oncontextmenu='event.preventDefault();'><div id ='status-progress-inner'></div></div>
 		<div id='status-indeterminate' style='display: none;' oncontextmenu='event.preventDefault();'>
 			<div></div>
